Add PWA manifest

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>testing Preact</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="manifest" href="/manifest.webmanifest">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
