--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>testing Preact</title>
+    <title>Liftosaur: Weight Lifting Tracking App</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="manifest" href="/manifest.webmanifest">
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="app"></div>
