Add proper program day finishing

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta
+      name="description"
+      content="A weight lifting tracking app, that allows you to follow popular weight lifting routines"
+    />
   </head>
   <body>
     <div id="app"></div>
