--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
       name="description"
       content="A weight lifting tracking app, that allows you to follow popular weight lifting routines"
     />
+    <style>
+      html,
+      body,
+      #app {
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
