Clean up header/footer, add version

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Liftosaur: Weight Lifting Tracking App</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
@@ -20,6 +20,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="main.js"></script>
+    <script src="main.js?version=xxxxxxxx"></script>
   </body>
 </html>
