--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
