--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,22 @@
   <body>
     <div id="app"></div>
     <script src="main.js?version=xxxxxxxx"></script>
+    <script>
+      (function(w, d, s, id) {
+        if (typeof w.webpushr !== "undefined") return;
+        w.webpushr =
+          w.webpushr ||
+          function() {
+            (w.webpushr.q = w.webpushr.q || []).push(arguments);
+          };
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://cdn.webpushr.com/app.min.js";
+        fjs.parentNode.appendChild(js);
+      })(window, document, "script", "webpushr-jssdk");
+      webpushr("init", "BLWKwVhXW8LAIgJufYdQ8XSOrsLDaYK3dta3QBLGFjF7v64qEOJukE_iaatuOMpNCMInRUCdaUPydj8G5xv_v8o");
+    </script>
   </body>
 </html>
