--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Liftosaur: Weight Lifting Tracking App</title>
     <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="preconnect" href="https://server-production.liftosaur.workers.dev" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
