--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://server-production.liftosaur.workers.dev" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
     <link rel="apple-touch-icon" href="/icons/icon512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#ffffff" />
