--- a/src/terms.html
+++ b/src/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Liftosaur: Privacy Policy</title>
+    <title>Liftosaur: Terms and Conditions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
