Fix CSS path in about.html

--- a/src/about.html
+++ b/src/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Liftosaur: Weight Lifting Tracking App - About</title>
-    <link rel="stylesheet" type="text/css" href="about.css?version=xxxxxxxx" />
+    <link rel="stylesheet" type="text/css" href="/about.css?version=xxxxxxxx" />
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
