Fix autoplay About video in Safari

--- a/src/about.html
+++ b/src/about.html
@@ -42,7 +42,7 @@
         <div class="hero-video">
           <div class="hero-phone">
             <div class="hero-phone-frame"></div>
-            <video muted autoplay loop src="/images/hero-video.mp4"></video>
+            <video playsinline muted autoplay loop src="/images/hero-video.mp4"></video>
           </div>
         </div>
       </section>
