Add og: meta tags

--- a/src/about.html
+++ b/src/about.html
@@ -9,6 +9,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
+    <meta property="og:title" content="Liftosaur: Weightlifting Tracking App" />
+    <meta property="og:description" content="Webapp for tracking weightlifting progress, with built-in progressive overload routines." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.liftosaur.com/images/progress.png" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
