--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
       name="description"
       content="A weight lifting tracking app, that allows you to follow popular weight lifting routines"
     />
+    <meta property="og:title" content="Liftosaur: Weightlifting Tracking App" />
+    <meta
+      property="og:description"
+      content="Webapp for tracking weightlifting progress, with built-in progressive overload routines."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.liftosaur.com/images/progress.png" />
     <!-- prettier-ignore -->
     <script>
       var _rollbarConfig = {
