Try logo as a og:image

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       content="Webapp for tracking weightlifting progress, with built-in progressive overload routines."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.liftosaur.com/images/progress.png" />
+    <meta property="og:image" content="https://www.liftosaur.com/images/logo.svg" />
     <!-- prettier-ignore -->
     <script>
       var _rollbarConfig = {
