Fix og:image for the about page

--- a/src/about.html
+++ b/src/about.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Liftosaur: Weightlifting Tracking App" />
     <meta property="og:description" content="Webapp for tracking weightlifting progress, with built-in progressive overload routines." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.liftosaur.com/images/progress.png" />
+    <meta property="og:image" content="https://www.liftosaur.com/images/logo-square.png" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
