Add social icons to about page

--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
     <meta property="og:title" content="Liftosaur: Weightlifting Tracking App" />
-    <meta property="og:description" content="Webapp for tracking weightlifting progress, with built-in progressive overload routines." />
+    <meta
+      property="og:description"
+      content="Webapp for tracking weightlifting progress, with built-in progressive overload routines."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.liftosaur.com/images/logo-square.png" />
     <meta name="theme-color" content="#ffffff" />
@@ -22,9 +25,20 @@
   <body>
     <div class="hero">
       <nav class="top-nav">
-        <ul>
+        <ul class="top-nav-menu">
           <li><a href="/">App</a></li>
           <li><a href="/docs/docs.html">Documentation</a></li>
+        </ul>
+        <ul class="top-nav-social">
+          <li>
+            <a target="_blank" href="https://www.facebook.com/liftosaur" class="logo-facebook"><span>Facebook</span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"><span>Twitter</span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://www.reddit.com/r/liftosaur" class="logo-reddit"><span>Reddit</span></a>
+          </li>
         </ul>
       </nav>
       <section class="hero-section">
@@ -35,8 +49,8 @@
               <h1>Liftosaur</h1>
             </a>
             <p>
-              The best weightlifting routines from r/fitness and r/weightroom, packed into a featureful and easy to use
-              web app.
+              Follow the best weightlifting routines from r/fitness and r/weightroom, packed into a featureful and easy
+              to use web app. Or create your own, using built-in scripting language!
             </p>
             <div class="hero-content-cta">
               <a href="/" class="hero-content-cta-button">Check it out</a>
@@ -181,13 +195,30 @@
           </div>
           <div class="footer-right">
             <nav>
-              <ul>
+              <ul class="footer-menu">
                 <li><a href="/">App</a></li>
                 <li><a href="/docs/docs.html">Documentation</a></li>
                 <li><a href="/terms.html">Terms &amp; Conditions</a></li>
                 <li><a href="/privacy.html">Privacy</a></li>
               </ul>
-            </div>
+              <ul class="footer-social">
+                <li>
+                  <a target="_blank" href="https://www.facebook.com/liftosaur" class="logo-facebook"
+                    ><span>Facebook</span></a
+                  >
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"
+                    ><span>Twitter</span></a
+                  >
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.reddit.com/r/liftosaur" class="logo-reddit"
+                    ><span>Reddit</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
