Try to fix opening pages in same window in standalone iOS

--- a/src/about.html
+++ b/src/about.html
@@ -49,8 +49,9 @@
               <h1>Liftosaur</h1>
             </a>
             <p>
-              Follow the best weightlifting routines from r/fitness and r/weightroom, packed into a featureful and easy
-              to use web app. Or create your own, using built-in scripting language!
+              The most flexible weightlifting tracker app ever. Build any routine you want, with any progression and
+              deloading logic using built-in scripting language. Or choose one of the pre-created weightlifting routines
+              from <a href="https://thefitness.wiki/" target="_blank">r/fitness and r/weightroom</a>.
             </p>
             <div class="hero-content-cta">
               <a href="/" class="hero-content-cta-button">Check it out</a>
