--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Liftosaur: Weight Lifting Tracking App</title>
     <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <link rel="preconnect" href="https://server-production.liftosaur.workers.dev" />
+    <link rel="preconnect" href="https://api.liftosaur.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
