Don't confirm if no changes in exercise or history

--- a/src/about.html
+++ b/src/about.html
@@ -57,8 +57,11 @@
               progressions and deloads using built-in scripting language. Or choose one of the pre-created weightlifting
               routines from <a href="https://thefitness.wiki/" target="_blank">r/fitness and r/weightroom</a>.
             </p>
+            <p>
+              Completely free. No ads.
+            </p>
             <div class="hero-content-cta">
-              <a href="/" class="hero-content-cta-button">Check it out</a>
+              <a href="/" class="hero-content-cta-button">It's free, check it out!</a>
             </div>
           </div>
         </div>
@@ -214,7 +217,7 @@ if (state.failures > 2) {
     </section>
     <section class="final">
       <div class="final-cta">
-        <a href="/" class="final-cta-button">Check it out</a>
+        <a href="/" class="final-cta-button">It's free, check it out!</a>
       </div>
       <p class="final-text">
         It's not a native mobile app, it's a web app. So, you visit and work with it just like with any site, open it
