Fix record page

--- a/src/record.html
+++ b/src/record.html
@@ -101,6 +101,6 @@
         </div>
       </footer>
     </div>
-    <script src="record.js?version=xxxxxxxx"></script>
+    <script src="/record.js?version=xxxxxxxx"></script>
   </body>
 </html>
