--- a/src/about.html
+++ b/src/about.html
@@ -29,6 +29,7 @@
         <ul class="top-nav-menu">
           <li><a href="/">App</a></li>
           <li><a href="/docs/docs.html">Documentation</a></li>
+          <li><a href="/blog">Blog</a></li>
         </ul>
         <ul class="top-nav-social">
           <li>
@@ -240,6 +241,7 @@ if (state.failures > 2) {
               <ul class="footer-menu">
                 <li><a href="/">App</a></li>
                 <li><a href="/docs/docs.html">Documentation</a></li>
+                <li><a href="/blog">Blog</a></li>
                 <li><a href="/terms.html">Terms &amp; Conditions</a></li>
                 <li><a href="/privacy.html">Privacy</a></li>
               </ul>
