--- a/src/record.html
+++ b/src/record.html
@@ -51,6 +51,7 @@
         <ul class="top-nav-menu">
           <li><a href="/">App</a></li>
           <li><a href="/docs/docs.html">Documentation</a></li>
+          <li><a href="/blog">Blog</a></li>
         </ul>
         <ul class="top-nav-social">
           <li>
@@ -75,6 +76,7 @@
                 <ul class="footer-menu">
                   <li><a href="/">App</a></li>
                   <li><a href="/docs/docs.html">Documentation</a></li>
+                  <li><a href="/blog">Blog</a></li>
                   <li><a href="/terms.html">Terms &amp; Conditions</a></li>
                   <li><a href="/privacy.html">Privacy</a></li>
                 </ul>
