Extract front/back muscles svgs into external SVG files

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://api.liftosaur.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="preload" href="/images/front-muscles.svg" as="image" />
+    <link rel="preload" href="/images/back-muscles.svg" as="image" />
     <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
     <link rel="apple-touch-icon" href="/icons/icon512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
