Extract all vendor stuff into a separate bundle

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Liftosaur: Weight Lifting Tracking App</title>
     <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
+    <link rel="stylesheet" type="text/css" href="vendors.css?vendor=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api.liftosaur.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,6 +47,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="vendors.js?vendor=xxxxxxxx"></script>
     <script src="main.js?version=xxxxxxxx"></script>
     <script>
       (function (w, d, s, id) {
