Add <noscript> tag

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <noscript>JavaScript is required for Liftosaur to work</noscript>
     <script src="vendors.js?vendor=xxxxxxxx"></script>
     <script src="main.js?version=xxxxxxxx"></script>
     <script>
