--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   <body>
     <div id="app"></div>
     <noscript>JavaScript is required for Liftosaur to work</noscript>
-    <script src="vendors.js?vendor=xxxxxxxx"></script>
+    <!-- <script src="vendors.js?vendor=xxxxxxxx"></script> -->
     <script src="main.js?version=xxxxxxxx"></script>
     <script>
       (function (w, d, s, id) {
