--- a/src/about.html
+++ b/src/about.html
@@ -61,8 +61,21 @@
             <p>
               Completely free. No ads.
             </p>
-            <div class="hero-content-cta">
-              <a href="/" class="hero-content-cta-button">It's free, check it out!</a>
+            <div class="content-cta">
+              <div>
+                <a href="/" class="content-cta-button">Use a web app</a>
+                <div class="content-cta-button-sub">Installable PWA</div>
+              </div>
+              <div class="content-cta-or">or</div>
+              <div class="content-cta-android">
+                <a
+                  target="_blank"
+                  href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+                  ><img
+                    alt="Get it on Google Play"
+                    src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
@@ -217,13 +230,26 @@ if (state.failures > 2) {
       </ul>
     </section>
     <section class="final">
-      <div class="final-cta">
-        <a href="/" class="final-cta-button">It's free, check it out!</a>
+      <div class="footer-content-cta content-cta">
+        <div>
+          <a href="/" class="content-cta-button">Use a web app</a>
+          <div class="content-cta-button-sub">Installable PWA</div>
+        </div>
+        <div class="content-cta-or">or</div>
+        <div class="content-cta-android">
+          <a
+            target="_blank"
+            href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+            ><img
+              alt="Get it on Google Play"
+              src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+          /></a>
+        </div>
       </div>
       <p class="final-text">
-        It's not a native mobile app, it's a web app. So, you visit and work with it just like with any site, open it
-        e.g. in mobile Safari or Chrome, but you can add it to your phone home screen, and then it will behave like a
-        regular app.
+        Use a web app - that means you can visit it and work with it just like with any site, open it e.g. in mobile
+        Safari or Chrome, but you can also add it to your phone home screen, and then it will behave like a regular app.
+        It's called PWA - Progressive Web App.
       </p>
     </section>
     <footer>
