Change the endpoints to lambda

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
     <link rel="stylesheet" type="text/css" href="vendors.css?vendor=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <link rel="preconnect" href="https://api.liftosaur.com" />
+    <link rel="preconnect" href="https://api2.liftosaur.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
