Update links to programs in about

--- a/src/about.html
+++ b/src/about.html
@@ -125,34 +125,15 @@ if (state.failures > 2) {
     <section class="programs">
       <h2>Built-in workout programs</h2>
       <ul class="programs-list">
-        <li><a target="_blank" href="https://thefitness.wiki/routines/5-3-1-for-beginners/">5/3/1 for beginners</a></li>
-        <li>
-          <a target="_blank" href="https://thefitness.wiki/routines/r-fitness-basic-beginner-routine/"
-            >Fitness Basic Beginner Program</a
-          >
-        </li>
-        <li>
-          <a
-            target="_blank"
-            href="http://old.reddit.com/r/Fitness/comments/2e79y4/dumbbell_ppl_proposed_alternative_to_dumbbell/"
-            >Dumbbell PPL</a
-          >
-        </li>
-        <li><a target="_blank" href="https://thefitness.wiki/routines/gzclp/">GZCLP</a></li>
-        <li>
-          <a
-            target="_blank"
-            href="https://www.reddit.com/r/Fitness/comments/37ylk5/a_linear_progression_based_ppl_program_for/"
-            >Metallicadpa PPL</a
-          >
-        </li>
-        <li><a target="_blank" href="https://startingstrength.com/">Starting Strength</a></li>
-        <li>
-          <a target="_blank" href="https://www.amazon.com/Strong-Curves-Womans-Building-Better/dp/1936608642"
-            >Strong Curves</a
-          >
-        </li>
-        <li><a target="_blank" href="https://www.t-nation.com/training/the-texas-method/">Texas Method</a></li>
+        <li><a target="_blank" href="/programs/the5314b">5/3/1 for beginners</a></li>
+        <li><a target="_blank" href="/programs/basicBeginner">Fitness Basic Beginner Program</a></li>
+        <li><a target="_blank" href="/programs/dbPpl">Dumbbell PPL</a></li>
+        <li><a target="_blank" href="/programs/gzclp">GZCLP</a></li>
+        <li><a target="_blank" href="/programs/lylegenericbulking">Lyle's Generic Bulking</a></li>
+        <li><a target="_blank" href="/programs/metallicadpappl">Metallicadpa PPL</a></li>
+        <li><a target="_blank" href="/programs/ss1">Starting Strength</a></li>
+        <li><a target="_blank" href="/programs/strongcurves1">Strong Curves</a></li>
+        <li><a target="_blank" href="/programs/texasmethod">Texas Method</a></li>
       </ul>
       <p class="programs-more">And of course you can build your own program as well!</p>
     </section>
