--- a/src/about.html
+++ b/src/about.html
@@ -30,6 +30,7 @@
           <li><a href="/">App</a></li>
           <li><a href="/docs/docs.html">Documentation</a></li>
           <li><a href="/blog">Blog</a></li>
+          <li><a href="https://github.com/astashov/liftosaur">Github</a></li>
         </ul>
         <ul class="top-nav-social">
           <li>
