Redesign onboarding and program selection

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" type="text/css" href="vendors.css?vendor=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api2.liftosaur.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
