Fix help scrolling, add some helps

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
     <link rel="preload" href="/images/back-muscles.svg" as="image" />
