Update screenshots and videos on the site

--- a/src/about.html
+++ b/src/about.html
@@ -83,7 +83,7 @@
         <div class="hero-video">
           <div class="hero-phone">
             <div class="hero-phone-frame"></div>
-            <video playsinline muted autoplay loop src="/images/hero-video.mp4"></video>
+            <video playsinline muted autoplay loop src="/images/hero-video2.mp4"></video>
           </div>
         </div>
       </section>
@@ -150,7 +150,7 @@ if (state.failures > 2) {
           </div>
           <div class="features-image">
             <div class="features-image-content">
-              <img src="/images/choose-a-program.png" alt="Choose a program screenshot" />
+              <img src="/images/choose-a-program2.png" alt="Choose a program screenshot" />
             </div>
           </div>
         </li>
@@ -163,7 +163,7 @@ if (state.failures > 2) {
           </div>
           <div class="features-image">
             <div class="features-image-content">
-              <img src="/images/history.png" alt="History screenshot" />
+              <img src="/images/history2.png" alt="History screenshot" />
             </div>
           </div>
         </li>
@@ -184,7 +184,7 @@ if (state.failures > 2) {
               <div class="features-progress-bottom-arrow"></div>
               <div class="features-progress-bottom-oval"></div>
               <div class="features-progress-bottom-hint">Rest Timer</div>
-              <img src="/images/progress.png" alt="Progress screenshot" />
+              <img src="/images/progress2.png" alt="Progress screenshot" />
             </div>
           </div>
         </li>
@@ -197,7 +197,7 @@ if (state.failures > 2) {
           </div>
           <div class="features-image">
             <div class="features-image-content">
-              <img src="/images/edit-day.png" alt="Edit Day screenshot" />
+              <img src="/images/edit-day2.png" alt="Edit Day screenshot" />
             </div>
           </div>
         </li>
@@ -210,7 +210,7 @@ if (state.failures > 2) {
           </div>
           <div class="features-image">
             <div class="features-image-content">
-              <img src="/images/edit-program-script.png" alt="Edit Program Script screenshot" />
+              <img src="/images/edit-program-script2.png" alt="Edit Program Script screenshot" />
             </div>
           </div>
         </li>
@@ -226,7 +226,7 @@ if (state.failures > 2) {
               <div class="features-settings-top-arrow"></div>
               <div class="features-settings-top-oval"></div>
               <div class="features-settings-top-hint">Log in here</div>
-              <img src="/images/settings.png" alt="Settings screenshot" />
+              <img src="/images/settings2.png" alt="Settings screenshot" />
             </div>
           </div>
         </li>
@@ -239,7 +239,7 @@ if (state.failures > 2) {
           </div>
           <div class="features-image">
             <div class="features-image-content">
-              <img src="/images/graphs.png" alt="Graphs screenshot" />
+              <img src="/images/graphs2.png" alt="Graphs screenshot" />
             </div>
           </div>
         </li>
