Add Sign In with Apple

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,11 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.liftosaur.com/images/logo-square.png" />
+    <script
+      async
+      type="text/javascript"
+      src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"
+    ></script>
     <!-- prettier-ignore -->
     <script>
       var _rollbarConfig = {
