--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" type="text/css" href="vendors.css?vendor=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api2.liftosaur.com" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
     <link rel="preload" href="/images/back-muscles.svg" as="image" />
