Update About page, add App Store button

--- a/src/about.html
+++ b/src/about.html
@@ -59,23 +59,34 @@
               progressions and deloads using built-in scripting language. Or choose one of the pre-created weightlifting
               routines from <a href="https://thefitness.wiki/" target="_blank">r/fitness and r/weightroom</a>.
             </p>
-            <p>
-              Completely free. No ads.
-            </p>
             <div class="content-cta">
-              <div>
-                <a href="/" class="content-cta-button">Use a web app</a>
-                <div class="content-cta-button-sub">Installable PWA</div>
+              <div class="content-cta-row">
+                <div class="content-cta-android">
+                  <a
+                    href="https://apps.apple.com/us/app/liftosaur/id1661880849?itsct=apps_box_badge&amp;itscg=30200"
+                    style="display: inline-block; overflow: hidden; border-radius: 13px; width: 165px; height: 55px;"
+                  >
+                    <img
+                      src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1673481600"
+                      alt="Download on the App Store"
+                      style="border-radius: 13px; width: 165px; height: 55px;"
+                    />
+                  </a>
+                </div>
+                <div class="content-cta-android">
+                  <a
+                    target="_blank"
+                    href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+                    ><img
+                      alt="Get it on Google Play"
+                      src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+                  /></a>
+                </div>
               </div>
-              <div class="content-cta-or">or</div>
-              <div class="content-cta-android">
-                <a
-                  target="_blank"
-                  href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
-                  ><img
-                    alt="Get it on Google Play"
-                    src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
-                /></a>
+              <div class="content-cta-row content-cta-row-bottom">
+                <span class="content-cta-row-or">or</span>
+                &nbsp;
+                <a href="/" target="_blank" class="content-cta-button">use as a web app</a>
               </div>
             </div>
           </div>
@@ -247,26 +258,35 @@ if (state.failures > 2) {
     </section>
     <section class="final">
       <div class="footer-content-cta content-cta">
-        <div>
-          <a href="/" class="content-cta-button">Use a web app</a>
-          <div class="content-cta-button-sub">Installable PWA</div>
+        <div class="content-cta-row">
+          <div class="content-cta-android">
+            <a
+              href="https://apps.apple.com/us/app/liftosaur/id1661880849?itsct=apps_box_badge&amp;itscg=30200"
+              style="display: inline-block; overflow: hidden; border-radius: 13px; width: 165px; height: 55px;"
+            >
+              <img
+                src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1673481600"
+                alt="Download on the App Store"
+                style="border-radius: 13px; width: 165px; height: 55px;"
+              />
+            </a>
+          </div>
+          <div class="content-cta-android">
+            <a
+              target="_blank"
+              href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+              ><img
+                alt="Get it on Google Play"
+                src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+            /></a>
+          </div>
         </div>
-        <div class="content-cta-or">or</div>
-        <div class="content-cta-android">
-          <a
-            target="_blank"
-            href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
-            ><img
-              alt="Get it on Google Play"
-              src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
-          /></a>
+        <div class="content-cta-row content-cta-row-bottom">
+          <span class="content-cta-row-or">or</span>
+          &nbsp;
+          <a href="/" target="_blank" class="content-cta-button">use as a web app</a>
         </div>
       </div>
-      <p class="final-text">
-        Use a web app - that means you can visit it and work with it just like with any site, open it e.g. in mobile
-        Safari or Chrome, but you can also add it to your phone home screen, and then it will behave like a regular app.
-        It's called PWA - Progressive Web App.
-      </p>
     </section>
     <footer>
       <div class="footer-wave"></div>
