--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api2.liftosaur.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="apple-itunes-app" content="app-id=1661880849" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
     <link rel="preload" href="/images/back-muscles.svg" as="image" />
